--- a/first.ipynb
+++ b/first.ipynb
@@ -24,6 +24,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import load_boston\n",
+    "from sklearn.linear_model import LinearRegression, Lasso, Ridge\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -32,7 +45,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.3 64-bit ('3.10.3')",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -46,12 +59,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.3"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8794c1f2d15e23061a8a7b3bce57489931aa60b497374814138a2a460ad3c4b0"
+    "hash": "498b8db653b96bbde6326ecf8b93739d1bfaa3080e13585617ed25526848f1e2"
    }
   }
  },
